hero overflow fix

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -1,6 +1,7 @@
 /* ABOUT PAGE */
 
 #about-hero {
+  overflow-x: hidden;
 	min-height: 400px;
 	background: url('../img/laptop.jpg') 50% 50%;
 	background-size: cover;
