--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -1,12 +1,13 @@
 /* contact info */
 
 #contact-info {
-	margin-top: 0px;
-	min-height: 400px;
-	background: url('../img/getintouch2.jpg') 50% 50%;
-	background-size: cover;
-	display: flex;
-	align-items: center;
+  overflow-x: hidden;
+  margin-top: 0px;
+  min-height: 400px;
+  background: url('../img/getintouch2.jpg') 50% 50%;
+  background-size: cover;
+  display: flex;
+  align-items: center;
 }
 
 
