--- a/app/assets/stylesheets/reference.scss
+++ b/app/assets/stylesheets/reference.scss
@@ -1,4 +1,5 @@
 #references-hero {
+  overflow-x: hidden;
 	height: 400px;
 	background-color: #1abb9c;
 	margin-top: 0px;
