--- a/app/assets/stylesheets/service.scss
+++ b/app/assets/stylesheets/service.scss
@@ -1,4 +1,5 @@
 #serv-page-hero {
+  overflow-x: hidden;
 	min-height: 400px;
 	background: url('../img/stuffs.jpg') 50% 50%;
 	background-size: cover;
